syntax = "proto3";
package rpcrouter;
import "google/protobuf/any.proto";

message ConflictOpt {
    uint64 term = 1;
    uint64 index = 2;
}

message AppendEntriesReq {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    bytes entries = 5;
    uint64 leaderCommit = 6;
}
message AppendEntriesResp {
    uint64 term = 1;
    bool success = 2;
    ConflictOpt conflictOpt = 3;
}

message InstallSnapshotReq {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 lastIncludedIndex = 3;
    uint64 lastIncludedTerm = 4;
    uint64 offset = 5;
    bytes data = 6;
    bool done = 7;
}

message InstallSnapshotResp {
    uint64 term = 1;
}

message VoteReq {
    uint64 term = 1;
    uint64 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message VoteResp {
    uint64 term = 1;
    bool voteGranted = 2;
}

service RPCService {
    rpc AppendEntries (AppendEntriesReq) returns (AppendEntriesResp);
    rpc InstallSnapshot (InstallSnapshotReq) returns (InstallSnapshotResp);
    rpc vote (VoteReq) returns (VoteResp);
}